# heladeria-concurrente

./: .gitignore  Cargo.toml  README.md  orders.json
src/: lib.rs
src/common/: constants.rs  flavors.rs  messages.rs  mod.rs
src/gateway/: gateway.rs  main.rs
src/robot/: main.rs  mod.rs  robot.rs  robot_orders_table.rs  stock_table.rs  utils.rs
src/screen/: main.rs  mod.rs  order_table.rs  screen.rs  screen_actors.rs  test.rs  utils.rs
