[package]
name = "heladeria"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
rand = "0.8"
actix = "0.11.1"
actix-rt = "2.0" # <-- Runtime for actix
futures = "0.3"
crossbeam-channel = "0.5"
serial_test = "0.5"

[[bin]]
name = "robot"
path = "src/robot/main.rs"

[[bin]]
name = "screen"
path = "src/screen/main.rs"

[[bin]]
name = "gateway"
path = "src/gateway/main.rs"